# shiva-si

shiva-si_0.1/: LICENSE  LICENSE.md  README.md  pyproject.toml
shiva-si_0.1/shiva-si_FINAL_PYPI_READY/: README.md  load_and_evaluate.py  pyproject.toml  requirements.txt  setup.py
shiva-si_0.1/shiva-si_FINAL_PYPI_READY/shiva/: __init__.py  cli.py  si_format.py
