[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiva-si"
version = "1.0.0"
description = "Dataset-agnostic model saving and loading format (.si) for AI/ML pipelines"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    { name="Your Siddique shiva", email="easwararaj05687@gmail.com }
]
dependencies = [
    "torch>=1.12.0",
    "tensorflow==2.10.1",
    "onnx>=1.12.0",
    "psutil",
    "cython",
    "numpy<2.0"
]
keywords = ["model saving", "torch", "tensorflow", "onnx", "machine learning", "serialization", ".si format"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Paradox license",
    "Operating System :: OS Independent"
]